# android-udp-bus

./: LICENSE  README.md  build.gradle  schema.json  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/vi_server/androidudpbus/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/vi_server/androidudpbus/: AddForm.java  MainActivity.java  Native.java  Serv.java
app/src/main/res/drawable/: ic_launcher_background.xml  udp.xml
app/src/main/res/layout/: activity_main.xml  port_form.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/vi_server/androidudpbus/: ExampleUnitTest.java
fastlane/metadata/android/: full_description.txt
fastlane/metadata/android/en-US/: short_description.txt
gradle/wrapper/: gradle-wrapper.properties
udphub/: Cargo.toml  org_vi_server_androidudpbus_Native.h
udphub/examples/: schema.rs
udphub/src/: app.rs  config.rs  hub.rs  jni.rs  lib.rs  udp_from_config.rs
