[package]
name = "udphub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
#arc-swap = "1.5.1"
bytes = "1.2.1"
humansize = "2.1.0"
jni = "0.20.0"
lru_time_cache = "0.11.11"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
socket2 = "0.4.7"
timeago = { version = "0.3.1", default-features = false }
tokio = { version = "1.21.2", features = ["rt", "net", "time", "sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7.4"
